--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiogram==3.0.0b7
+aiogram==2.25.1  # Стабильная версия вместо бета
 python-dotenv
-
+aiohttp==3.8.5  # Явно указываем совместимую версию
