--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiogram==2.25.1  # Стабильная версия вместо бета
+aiogram==3.0.0b7
 python-dotenv
-aiohttp==3.8.5  # Явно указываем совместимую версию
+aiohttp==3.9.0b0  # Версия с поддержкой Python 3.11
