--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,55 @@
-aiogram==3.0.0b7
-python-dotenv
-aiohttp~=3.8.4  # Совместимая версия с aiogram 3.0.0b7
+aiofiles==24.1.0
+aiogram==3.20.0.post0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.11
+aiosignal==1.3.1
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==24.2.0
+babel==2.16.0
+certifi==2024.8.30
+distlib==0.3.9
+distro==1.9.0
+Django==5.2.4
+django-autoslug==1.9.9
+django-crispy-forms==2.4
+django-jazzmin==3.0.0
+filelock==3.16.1
+frozenlist==1.5.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+magic-filter==1.0.12
+multidict==6.1.0
+numpy==2.2.3
+openai==1.91.0
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+outcome==1.3.0.post0
+pillow==11.0.0
+platformdirs==4.3.6
+propcache==0.2.0
+psycopg2==2.9.10
+pydantic==2.9.2
+pydantic_core==2.23.4
+PySocks==1.7.1
+python-dotenv==1.1.1
+selenium==4.27.1
+setuptools==80.9.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sqlparse==0.5.1
+tqdm==4.67.1
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+virtualenv==20.27.0
+websocket-client==1.8.0
+wheel==0.45.1
+wsproto==1.2.0
+yarl==1.17.1
