Aiogram bot + asyncpg + render blueprint

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,18 @@
-# Python specific
+# Python
 __pycache__/
 *.pyc
-.pytest_cache/
-.mypy_cache/
-
-# Virtual environment
-venv/
-.venv/
-env/
-*.env
-
-# Database files
+*.pyo
+*.pyd
 *.db
-*.sqlite
-identifier.sqlite # Specific to your project
-data.db # Specific to your project
-routes.db # Specific to your project
+*.sqlite3
 
-# IDEs
-.idea/ # PyCharm project files
-.vscode/ # VS Code project files
+# venv
+venv/
+.env/
 
-# Operating System
-.DS_Store # macOS specific
+# IDE
+.idea/
+.vscode/
 
-# Other project-specific
-*.zip
-# photos/ # Uncomment this if you DON'T want photos in Git
+# OS
+.DS_Store
