--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ POSTGRES_PASSWORD=job2025$
 POSTGRES_DB=routes_db
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+DATABASE_URL=sqlite+aiosqlite:///routes.db
